# HW-Type-annotations-check

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml  pyright.yml
src/: advanced_decorator.py  advanced_typed-dict.py  any.py  await.py  buffer.py  callable-protocol.py  callable.py  classvar.py  concatenate.py  constructor.py  decorator.py  descriptor.py  dict.py  empty-tuple.py  final.py  generator.py  generic-class.py  generic.py  generic2.py  generic3.py  instance-var.py  kwargs.py  list.py  literal.py  literalstring.py  never.py  never2.py  optional.py  overload-literal.py  overload.py  parameter.py  paramspec.py  protocol.py  recursive.py  return.py  self-casting.py  self.py  tuple.py  type.py  typealias.py  (+10 more)
